db postgres init with article
